openmolar (0.3.2+bzr0799-0~__DIST__0) __DIST__; urgency=low

  * bug fixes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 04 Feb 2013 12:24:01 +0000


openmolar (0.3.2+bzr0798-0~__DIST__0) __DIST__; urgency=low

  * upstream release (invokes a schema change)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 02 Feb 2013 21:39:33 +0000


openmolar (0.3.1+bzr0776-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 28 Oct 2012 19:59:40 +0000


openmolar (0.3.1+bzr0775-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 26 Oct 2012 01:32:11 +0100


openmolar (0.3.1+bzr0774-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 26 Oct 2012 00:21:25 +0100


openmolar (0.3.0+bzr0773-0~__DIST__0) __DIST__; urgency=low

  * python2.6 fix (cursor.executemany is broken?)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 23 Oct 2012 14:31:05 +0100


openmolar (0.3.0+bzr0772-0~__DIST__0) __DIST__; urgency=low

  * ability to edit today's notes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 22 Oct 2012 18:39:15 +0100


openmolar (0.3.0+bzr0771-0~__DIST__0) __DIST__; urgency=low

  * re-introduced system dat into the formatted notes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 22 Oct 2012 10:29:18 +0100


openmolar (0.3.0+bzr0770-0~__DIST__0) __DIST__; urgency=low

  * ui tweaks

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 20 Oct 2012 01:50:56 +0100


openmolar (0.2.3+bzr0769-0~__DIST__0) __DIST__; urgency=low

  * upstream tweak

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 19 Oct 2012 17:52:37 +0100


openmolar (0.2.3+bzr0768-0~__DIST__0) __DIST__; urgency=low

  * new upstream version with a significant schema change

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 19 Oct 2012 17:36:59 +0100


openmolar (0.2.2+bzr0766-0~__DIST__0) __DIST__; urgency=low
